buildscript {
	ext {
		springBootVersion = "2.0.0.RELEASE"
	}
	repositories {
		mavenCentral()
		maven { url "https://repo.spring.io/snapshot" }
		maven { url "https://repo.spring.io/milestone" }
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
    id "com.heroku.sdk.heroku-gradle" version "1.0.1"
}

apply plugin: "java"
apply plugin: "eclipse"
apply plugin: "org.springframework.boot"
apply plugin: "io.spring.dependency-management"
apply plugin: "application"

group = "org.arieled91"
version = "1.0"

sourceCompatibility = "1.8"
targetCompatibility = "1.8"

mainClassName = "org.arieled91.hayequipo.Application"

task wrapper(type: Wrapper) {
	gradleVersion = "4.5"
}


repositories {
	mavenCentral()
	maven { url "https://repo.spring.io/snapshot" }
	maven { url "https://repo.spring.io/milestone" }
}

dependencies {
	runtime("org.springframework.boot:spring-boot-devtools")

    compile("org.springframework.boot:spring-boot-starter")
	compile("org.springframework.boot:spring-boot-starter-web")
    compile("org.springframework.boot:spring-boot-starter-data-jpa")
    compile("org.springframework.boot:spring-boot-starter-data-rest")
    compile("org.springframework.boot:spring-boot-starter-actuator")
    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
    compile("org.springframework.boot:spring-boot-starter-security")
    compile("org.springframework.data:spring-data-rest-hal-browser")
    compile("org.springframework.boot:spring-boot-starter-mail")
    compile("org.springframework.mobile:spring-mobile-device:1.1.5.RELEASE")

    compile("org.hibernate:hibernate-entitymanager:5.2.13.Final")
    compile("org.hibernate:hibernate-core:5.2.13.Final")
    compile("com.h2database:h2")
    compile("org.jetbrains:annotations:15.0")
	compile("io.jsonwebtoken:jjwt:0.9.0")
	compile("javax.xml.bind:jaxb-api:2.3.0")
	compile("org.flywaydb:flyway-core:5.0.7")
	compile("org.postgresql:postgresql:42.2.2")

    testCompile("org.springframework.boot:spring-boot-starter-test")
    testCompile("org.springframework.security:spring-security-test")
	testCompile("junit:junit")

}

jar {
    baseName = 'hayequipo'
    version = '1.0'
}

//Command: ./gradlew build deployHeroku
heroku {
    appName = "futboldesa"
    processTypes(
            web: "java -jar -Dspring.profiles.active=production build/libs/hayequipo-*.jar"

    )
}

//applicationDefaultJvmArgs = ["-Dspring.profiles.active=production"]

task stage(type: Copy, dependsOn: [clean, build]) {
    from jar.archivePath
    into project.rootDir
    rename {
        'app.jar'
    }
}
stage.mustRunAfter(clean)

clean << {
    project.file('app.jar').delete()
}